--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <!-- Logo -->
-    <img id="logo" src="me.jpg" alt="Lavith Chatbot Logo">
+    <img id="logo" src="logo.gif" alt="Lavith Chatbot Logo">
     <h2>Student Chatbot</h2>
 
     <!-- Chat UI -->
