--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,10 @@
 </head>
 <body>
     <!-- Logo -->
-    <img id="logo" src="logo.gif" alt="Lavith Chatbot Logo">
-    <h2>Student Chatbot</h2>
+    <div id="logo">
+    <img src="logo.gif" alt="Lavith Chatbot Logo">
+        </div>
+    <h2>Lavith Chatbot</h2>
 
     <!-- Chat UI -->
     <div id="chatbox"></div>
